wireframe, and UI elements

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 :root{
-    --blue: blue;
+    --blue: rgb(0, 102, 255);
 }
 
 ::selection {
@@ -12,4 +12,5 @@
     /* Gecko Browsers */
 }
 :global(body) {
+    color: azure;
 }
